--- a/caffe-mobile/AndroidManifest.xml
+++ b/caffe-mobile/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sh1r0.caffe.android.lib"
+    package="com.xxxzxxx.caffe.android.lib"
     android:versionCode="1"
     android:versionName="1.0" >
 
